Attempt to use OpenWEBui
it does not work. at least not yet

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ CHROMA_HOST=chroma:8000
 
 # Service Configuration
 PROCESSOR_HOST=processor:8001
+
+# Open WebUI Configuration
+MCPO_API_KEY=local-rag-secret
+ENABLE_SIGNUP=true
+DEFAULT_USER_ROLE=user
